# ESP32-S3-ePaper-1.54

./: .gitignore  README.md
02_Example/Arduino/12_FT6336_Test/: 12_FT6336_Test.ino
02_Example/ESP-IDF/V1/11_FactoryProgram/components/adc_bsp/: adc_bsp.cpp
02_Example/ESP-IDF/V2/04_SD_Card/components/sdcard_bsp/: CMakeLists.txt
02_Example/ESP-IDF/V2/07_BATT_PWR_Test/components/board_power_bsp/: CMakeLists.txt
02_Example/ESP-IDF/V2/07_BATT_PWR_Test/components/epaper_driver_bsp/: CMakeLists.txt
02_Example/ESP-IDF/V2/08_Audio_Test/components/codec_board/: CMakeLists.txt  idf_component.yml  lcd_init.c
02_Example/ESP-IDF/V2/08_Audio_Test/components/i2c_bsp/: CMakeLists.txt
02_Example/ESP-IDF/V2/08_Audio_Test/components/user_app/: CMakeLists.txt
02_Example/ESP-IDF/V2/09_LVGL_V8_Test/components/user_app/: CMakeLists.txt
02_Example/ESP-IDF/V2/10_LVGL_V9_Test/components/board_power_bsp/: CMakeLists.txt
02_Example/ESP-IDF/V2/10_LVGL_V9_Test/components/user_app/: CMakeLists.txt
02_Example/ESP-IDF/V2/11_FactoryProgram/components/app/: CMakeLists.txt
02_Example/ESP-IDF/V2/11_FactoryProgram/components/externlib/codec_board/: CMakeLists.txt  lcd_init.c
02_Example/ESP-IDF/V2/11_FactoryProgram/components/port_bsp/: CMakeLists.txt  idf_component.yml
02_Example/ESP-IDF/V2/11_FactoryProgram/components/user_app/: user_app.cpp
02_Example/ESP-IDF/V2/12_RTC_Sleep_Test/components/button_bsp/: CMakeLists.txt
02_Example/ESP-IDF/V2/12_RTC_Sleep_Test/components/user_app/: CMakeLists.txt
(+1 files in other folders)
